--- a/src/main/resources/db/changelog/v1-0/db.changelog.yaml
+++ b/src/main/resources/db/changelog/v1-0/db.changelog.yaml
@@ -14,7 +14,9 @@ databaseChangeLog:
   - include:
       file: db/changelog/v1-0/client_grant.yaml
   - include:
-      file: db/changelog/v1-0/client_redirect_uri.yaml
+      file: db/changelog/v1-0/client_redirect.yaml
+  - include:
+      file: db/changelog/v1-0/client_origin.yaml
   - include:
       file: db/changelog/v1-0/client_role.yaml
   - include:
