--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ dependencies {
 
     // Other
     compile group: 'org.apache.commons',    name: 'commons-lang3',  version: '3.5'
+    compile group: 'org.owasp.esapi',       name: 'esapi',          version: '2.1.0.1'
     
     // Testing
     testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version:"${springBootVersion}") {
